########################
# Current Developments #
########################

Work toward next release.  Currently under development.

ADDED:

* Added a built-in help queue.

* Added a means of viewing a page with different (lower) permissions by
* spoofing your role.

CHANGED:

* Updated KaTeX to version 0.8.2.

* Updated python-markdown to version 2.6.9.

* The magic variable controlling the checker's location is now
  cs_checker_websocket instead of cs_websocket_location (which is now
  ambiguous).

* Added more options to modify the styling of the "login required" page.

DEPRECATED:

REMOVED:

* Removed lots of unused imports, unused local variables, etc, courtesy of
  pyflakes.

FIXED:

* Fixed an issue with the 'login' authentication type that caused false
  negatives when checking passwords from different browsers.

* Fixed an issue with broken loading of uploaded files from the database.

* Fixed an issue that caused an error message not to be shown when cs_form was
  not defined.

* Fixed a lingering instance of xrange.

SECURITY:

DOCUMENTATION:


##################
# Version 10.3.0 #
##################

CHANGED:

* Moved all logs to one central location to make backups easier.


##################
# Version 10.2.2 #
##################

REMOVED:

* Removed several calls to the deprecated cs_print from the default "main"
  page.

* Removed Acknowledgments section from the default "main" page.

FIXED:

* Removed an extraneous print statement from the default handler.

* Remove HTML formatting from course name in source.zip downloads.


##################
# Version 10.2.1 #
##################

CHANGED:

* Prevented the creation of extra directories when reading nonexistent logs.

REMOVED:

* Removed the defunct checker_reporter.js script.

FIXED:

* Fixed a number of issues with sessions.

* Fixed an issue with serializing Python sets for logging.

##################
# Version 10.2.0 #
##################

ADDED:
